# aer-search-earthaccess

./: .gitignore  README.md  pyproject.toml  workspace.toml
components/aer/search_earthaccess/: __init__.py  core.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/earthaccess_search_20260319/: index.md  metadata.json  plan.md  spec.md
docs/: codemap.csv
projects/aer-search-earthaccess/: README.md  pyproject.toml
test/components/aer/search_earthaccess/: test_core.py
