[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aer-search-earthaccess-root"
version = "0.1.0"
description = "A Python Polylith template code repo"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Your Name" }]
dependencies = ["aer-core"]

[tool.uv]
managed = true
add-bounds = "major"

[tool.uv.workspace]
members = ["projects/*"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
dev-mode-dirs = ["components", "bases", "development", "."]

[tool.ruff]
exclude = [
    ".git",
    ".github",
    "__pycache__",
    ".mypy_cache",
    ".ruff_cache",
    "dist",
    ".venv",
    "./development/*.py",
]
line-length = 120

[tool.basedpyright]
venvPath = "."
venv = ".venv"
extraPaths = ["components/", "bases/"]

[dependency-groups]
dev = [
    "polylith-cli>=1.43.0,<2.0.0",
    "pytest>=9.0.2,<10.0.0",
]
