[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "aer-search-earthaccess"
version = "2.0.4"
description = "Polylith project for the earthaccess search plugin"
readme = "README.md"
authors = [{ name = "Fran Dorr" }]

requires-python = ">=3.13"

dependencies = [
    "aer-core",
    "attrs>=25.4,<26",
    "earthaccess>=0.16,<0.17",
    "geopandas>=1.1.2,<2",
    "pandas>=3.0.1,<4",
    "pandera[geopandas]>=0.24,<0.25",
    "shapely>=2.1.2,<3",
    "structlog>=25.5,<26",
]
urls.Homepage = "https://github.com/frandorr/aer-search-earthaccess"
urls.Issues = "https://github.com/frandorr/aer-search-earthaccess/issues"
urls.Repository = "https://github.com/frandorr/aer-search-earthaccess"

[project.entry-points."aer.plugins"]
search_earthaccess = "aer.search_earthaccess.core:EarthAccessSearchPlugin"

[tool.hatch]
build.dev-mode-dirs = [ "../../components", "../../bases", "../../development", "." ]
build.hooks.polylith-bricks = {}
build.targets.wheel.packages = ["aer"]

[tool.polylith]
bricks."../../components/aer/search_earthaccess" = "aer/search_earthaccess"
